database connection added

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodep",
   "version": "1.0.0",
-  "description": "Simple node project with express",
+  "description": "Simple node project with express, mongodb",
   "type": "module",
   "main": "app.js",
   "scripts": {
@@ -14,7 +14,8 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
-    "express": "^4.20.0"
+    "express": "^4.20.0",
+    "mongoose": "^8.6.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
