--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "author": "Mohammad Wahid",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.20.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.1",
     "validator": "^13.12.0"
